--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
 	<title></title>
+	<link href="https://fonts.googleapis.com/css?family=Chicle" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="CSS/style.css">
 </head>
 <body>
+
+	<h1 class="title">Frogger</h1>
+	<h3 class ='scoreBoard' id='scoreBoard'> </h3>	
 
 	<canvas id='canvas' width= '900' height='700'></canvas>
 
