Added Score To DOM; added logic to change score;Added logic to change lives

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
 
 	<h1 class="title">Frogger</h1>
-	<h3 class ='scoreBoard' id='scoreBoard'> </h3>	
+	<div class="scoreBoard">
+		<h3  id='lives'> </h3>
+		<h3  id ='score'></h3>		
+	</div>
 
 	<canvas id='canvas' width= '900' height='700'></canvas>
 
