Added sprite img of frog

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 
+
 	<h1 class="title">Frogger</h1>
 	<div class="scoreBoard">
 		<h3  id='lives'> </h3>
 		<h3  id ='score'></h3>		
 	</div>
-
-	<canvas id='canvas' width= '900' height='700'></canvas>
+	
+	<canvas id='canvas' width= '900' height='700'><img id= 'frog' src='http://www.itagent.fi/frog.png' alt ='frog'/></canvas>
 
 <script type="text/javascript" src='JS/app.js'></script>
 </body>
