--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<h3  id ='score'></h3>		
 	</div>
 	
-	<canvas id='canvas' width= '900' height='700'><img id= 'frog' src='http://www.itagent.fi/frog.png' alt ='frog'/></canvas>
+	<canvas id='canvas' width= '900' height='700'></canvas>
 
 <script type="text/javascript" src='JS/app.js'></script>
 </body>
