Increments speed After Each round

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 
 
 	<h1 class="title">Frogger</h1>
+
 	<div class="scoreBoard">
 		<h3  id='lives'> </h3>
-		<h3  id ='score'></h3>		
+		<h3  id ='score'></h3>
+		<img src='images/play.svg' id='pause' class='btn' />	
 	</div>
 	
 	<canvas id='canvas' width= '900' height='700'></canvas>
+
+	
 
 <script type="text/javascript" src='JS/app.js'></script>
 </body>
