Added Round and Game Over Text

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<div class="scoreBoard">
 		<h3  id='lives'> </h3>
 		<h3  id ='score'></h3>
+		<h3 id="round"></h3>
 		<img src='images/play.svg' id='pause' class='btn' />	
 	</div>
 	
